[project]
name = "camera"
version = "0.0.0"
authors = [{ name = "Your Name", email = "email@email.com" }]
description = "camera"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "dora-rs >= 0.3.9",
    "opencv-python>=4.13.0.92",
]

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
camera = "camera.main:main"

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP"
]
